welcome.lessons.welcome.environment.Environment.scala.error
SourceCode:1: error: value avance is not a member of Unit
gauche()avance() 
        ^